--- a/server.properties
+++ b/server.properties
@@ -1,11 +1,12 @@
 #Minecraft server properties
-#Sun Jul 07 15:44:56 CEST 2019
+#Sun Jul 07 22:02:46 CEST 2019
 spawn-protection=16
 max-tick-time=-1
 generator-settings=
 force-gamemode=false
 allow-nether=true
 gamemode=0
+broadcast-console-to-ops=true
 enable-query=false
 player-idle-timeout=0
 difficulty=1
@@ -34,5 +35,5 @@ online-mode=true
 max-build-height=256
 level-seed=
 prevent-proxy-connections=false
-motd=A Tekxit 3 Server.
 enable-rcon=false
+motd=A Tekxit 3 Server.
