--- a/config/battletowers.cfg
+++ b/config/battletowers.cfg
@@ -24,11 +24,14 @@ battletowerchestitems {
 biomespawnallowed {
     B:deep_mushroom_forest=true
     B:deep_ocean=true
+    B:dense_twilight_forest=true
     B:extreme_hills=true
+    B:firefly_forest=true
     B:mini_jungle=true
     B:mushroom_forest=true
     B:ocean=true
     B:twilight_clearing=true
+    B:twilight_stream=true
 }
 
 
