--- a/config/infernalmobs.cfg
+++ b/config/infernalmobs.cfg
@@ -23,8 +23,24 @@ entitiesalwaysinfernal {
     B:EntitySlime=false
     B:EntitySpider=false
     B:EntityStray=false
+    B:EntityTFAdherent=false
+    B:EntityTFArmoredGiant=false
+    B:EntityTFBlockGoblin=false
+    B:EntityTFDeathTome=false
+    B:EntityTFFireBeetle=false
+    B:EntityTFGiantMiner=false
+    B:EntityTFGoblinKnightLower=false
+    B:EntityTFGoblinKnightUpper=false
+    B:EntityTFHelmetCrab=false
+    B:EntityTFKingSpider=false
     B:EntityTFKobold=false
+    B:EntityTFMazeSlime=false
+    B:EntityTFMinotaur=false
+    B:EntityTFMosquitoSwarm=false
+    B:EntityTFPinchBeetle=false
     B:EntityTFRedcap=false
+    B:EntityTFRedcapSapper=false
+    B:EntityTFSkeletonDruid=false
     B:EntityTFSlimeBeetle=false
     B:EntityTFSwarmSpider=false
     B:EntityTFTroll=false
@@ -51,7 +67,14 @@ entitybasehealth {
     D:EntitySkeleton=20.0
     D:EntitySlime=4.0
     D:EntitySpider=16.0
+    D:EntityTFArmoredGiant=80.0
+    D:EntityTFFireBeetle=25.0
     D:EntityTFKobold=13.0
+    D:EntityTFMazeSlime=2.0
+    D:EntityTFMinotaur=30.0
+    D:EntityTFPinchBeetle=40.0
+    D:EntityTFSlimeBeetle=25.0
+    D:EntityTFTroll=30.0
     D:EntityWitch=26.0
     D:EntityZombie=20.0
     D:EntityZombieVillager=20.0
@@ -126,8 +149,24 @@ permittedentities {
     B:EntitySlime=true
     B:EntitySpider=true
     B:EntityStray=true
+    B:EntityTFAdherent=true
+    B:EntityTFArmoredGiant=true
+    B:EntityTFBlockGoblin=true
+    B:EntityTFDeathTome=true
+    B:EntityTFFireBeetle=true
+    B:EntityTFGiantMiner=true
+    B:EntityTFGoblinKnightLower=true
+    B:EntityTFGoblinKnightUpper=true
+    B:EntityTFHelmetCrab=true
+    B:EntityTFKingSpider=true
     B:EntityTFKobold=true
+    B:EntityTFMazeSlime=true
+    B:EntityTFMinotaur=true
+    B:EntityTFMosquitoSwarm=true
+    B:EntityTFPinchBeetle=true
     B:EntityTFRedcap=true
+    B:EntityTFRedcapSapper=true
+    B:EntityTFSkeletonDruid=true
     B:EntityTFSlimeBeetle=true
     B:EntityTFSwarmSpider=true
     B:EntityTFTroll=true
